--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.0",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
+    "swiper": "^6.3.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
