--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.2.0",
-    "mongoose": "^5.10.19"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.19",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
