--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
     "swiper": "^6.3.5",
     "web-vitals": "^0.2.4"
